Fix 2px misalignment in the navbar

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -48,7 +48,7 @@
 .navbar {
   width: 100%;
   max-width: var(--base-width);
-  height: 76px;
+  height: 78px;
 }
 
 .content {
